<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:src="@drawable/dtvkit" />

    <LinearLayout
        android:id="@+id/select_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/select_dvbc"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="@string/strDvbc" />

        <Button
            android:id="@+id/select_dvbt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="@string/strDvbt" />

        <Button
            android:id="@+id/select_dvbs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="@string/strDvbs" />

        <Button
            android:id="@+id/select_setting"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="@string/strSettings" />
    </LinearLayout>
</LinearLayout>
